--- a/bevim_project/locale/pt_BR/LC_MESSAGES/django.po
+++ b/bevim_project/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-21 01:19+0000\n"
+"POT-Creation-Date: 2016-09-21 02:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,7 +32,6 @@ msgstr "Confirmação de Senha"
 
 #: bevim/forms.py:18
 #, fuzzy
-#| msgid "Enter the same password as above, for verification."
 msgid "Enter the same password as above for verification."
 msgstr "Digite a mesma senha de cima, para verificação"
 
@@ -41,10 +40,8 @@ msgid "New Experiment"
 msgstr "Novo Ensaio"
 
 #: bevim/templates/base.html:31
-#, fuzzy
-#| msgid "New Experiment"
 msgid "Experiments"
-msgstr "Novo Ensaio"
+msgstr "Ensaios"
 
 #: bevim/templates/base.html:38 bevim/templates/login.html:18
 msgid "Login"
@@ -86,8 +83,10 @@ msgstr "Cadastrado com sucesso!"
 msgid "Could not perform the registration! Try again."
 msgstr "Não foi possível realizar o cadastro! Tente novamente."
 
-#: bevim/views.py:137
+#: bevim/views.py:150
 msgid ""
 "It is not possible start an experiment without one frequency and one time. "
 "Please fill the fields."
-msgstr "Não é possível iniciar um ensaio sem uma frequência e um tempo. Por favor, preencha os campos."
+msgstr ""
+"Não é possível iniciar um ensaio sem uma frequência e um tempo. Por favor, "
+"preencha os campos."
